# typesafe-precure

./: .gitattributes  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  HLint.hs  LICENSE  README.md  circle.yml  exec-cure-index.sh  stack.yaml  typesafe-precure.cabal
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
app/: migrate2cure-index.hs
cure-index/: Main.hs
scripts/: generate-all-precurem.hs
src/ACME/: PreCure.hs
src/ACME/PreCure/: Index.hs  Monad.hs  Profiles.hs  Textbook.hs  Types.hs
src/ACME/PreCure/Index/: Gen.hs  Lib.hs  Types.hs
src/ACME/PreCure/Monad/: Config.hs  Super.hs
src/ACME/PreCure/Monad/Super/: Core.hs  Types.hs
src/ACME/PreCure/Profiles/: MahoGirls.hs
src/ACME/PreCure/Textbook/: DeliciousParty.hs  DokiDoki.hs  Dokidoki.hs  First.hs  Fresh.hs  GoPrincess.hs  HappinessCharge.hs  HealinGood.hs  HeartCatch.hs  Hugtto.hs  KirakiraALaMode.hs  MahoGirls.hs  MaxHeart.hs  Movie.hs  Smile.hs  SoaringSky.hs  SplashStar.hs  StarTwinkle.hs  Suite.hs  TropicalRouge.hs  Wonderful.hs  Yes5.hs  Yes5GoGo.hs  YouAndIdol.hs
src/ACME/PreCure/Textbook/DeliciousParty/: Profiles.hs
src/ACME/PreCure/Textbook/DokiDoki/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/Dokidoki/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/First/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/Fresh/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/GoPrincess/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/HappinessCharge/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/HealinGood/: Profiles.hs
src/ACME/PreCure/Textbook/HeartCatch/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/Hugtto/: Profiles.hs  Types.hs
src/ACME/PreCure/Textbook/KirakiraALaMode/: Instances.hs  Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/MahoGirls/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/MaxHeart/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/Movie/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/Smile/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/SoaringSky/: Profiles.hs
src/ACME/PreCure/Textbook/SplashStar/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/StarTwinkle/: Profiles.hs
src/ACME/PreCure/Textbook/Suite/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/TropicalRouge/: Profiles.hs  Types.hs
src/ACME/PreCure/Textbook/Wonderful/: Profiles.hs
src/ACME/PreCure/Textbook/Yes5/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/Yes5GoGo/: Profiles.hs  Types.hs  Words.hs
src/ACME/PreCure/Textbook/YouAndIdol/: Profiles.hs
src/ACME/PreCure/Types/: Internal.hs  TH.hs  Transformed.hs
src/ACME/PreCure/Types/TH/: PreCureGirlMap.hs
test/ACME/: PreCureSpec.hs
