name:                 typesafe-precure
version:              0.6.3.1
synopsis:             Type-safe transformations and purifications of PreCures (Japanese Battle Heroine)
description:          See README.md for details.
homepage:             https://github.com/igrep/typesafe-precure#readme
license:              BSD3
license-file:         LICENSE
author:               Yuji Yamamoto
maintainer:           whosekiteneverfly@gmail.com
copyright:            2018 Yuji Yamamoto
category:             ACME
build-type:           Simple
extra-source-files:   README.md
                      CHANGELOG.md
                      gen/*.json
cabal-version:        >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     ACME.PreCure
                     , ACME.PreCure.Textbook

                     , ACME.PreCure.Textbook.First
                     , ACME.PreCure.Textbook.First.Words
                     , ACME.PreCure.Textbook.First.Types

                     , ACME.PreCure.Textbook.MaxHeart
                     , ACME.PreCure.Textbook.MaxHeart.Words
                     , ACME.PreCure.Textbook.MaxHeart.Types

                     , ACME.PreCure.Textbook.SplashStar
                     , ACME.PreCure.Textbook.SplashStar.Words
                     , ACME.PreCure.Textbook.SplashStar.Types

                     , ACME.PreCure.Textbook.Yes5
                     , ACME.PreCure.Textbook.Yes5.Words
                     , ACME.PreCure.Textbook.Yes5.Types

                     , ACME.PreCure.Textbook.Yes5GoGo
                     , ACME.PreCure.Textbook.Yes5GoGo.Words
                     , ACME.PreCure.Textbook.Yes5GoGo.Types

                     , ACME.PreCure.Textbook.Fresh
                     , ACME.PreCure.Textbook.Fresh.Words
                     , ACME.PreCure.Textbook.Fresh.Types

                     , ACME.PreCure.Textbook.HeartCatch
                     , ACME.PreCure.Textbook.HeartCatch.Words
                     , ACME.PreCure.Textbook.HeartCatch.Types

                     , ACME.PreCure.Textbook.Suite
                     , ACME.PreCure.Textbook.Suite.Words
                     , ACME.PreCure.Textbook.Suite.Types

                     , ACME.PreCure.Textbook.Smile
                     , ACME.PreCure.Textbook.Smile.Words
                     , ACME.PreCure.Textbook.Smile.Types

                     , ACME.PreCure.Textbook.Dokidoki
                     , ACME.PreCure.Textbook.Dokidoki.Words
                     , ACME.PreCure.Textbook.Dokidoki.Types

                     , ACME.PreCure.Textbook.HappinessCharge
                     , ACME.PreCure.Textbook.HappinessCharge.Words
                     , ACME.PreCure.Textbook.HappinessCharge.Types

                     , ACME.PreCure.Textbook.GoPrincess
                     , ACME.PreCure.Textbook.GoPrincess.Words
                     , ACME.PreCure.Textbook.GoPrincess.Types

                     , ACME.PreCure.Textbook.Movie
                     , ACME.PreCure.Textbook.Movie.Words
                     , ACME.PreCure.Textbook.Movie.Types

                     , ACME.PreCure.Textbook.MahoGirls
                     , ACME.PreCure.Textbook.MahoGirls.Types
                     , ACME.PreCure.Textbook.MahoGirls.Words

                     , ACME.PreCure.Textbook.KirakiraALaMode
                     , ACME.PreCure.Textbook.Hugtto

                     , ACME.PreCure.Types
                     , ACME.PreCure.Monad
  other-modules:       ACME.PreCure.Types.TH
                     , ACME.PreCure.Index
                     , ACME.PreCure.Index.Lib
                     , ACME.PreCure.Index.Types

                     , ACME.PreCure.Textbook.KirakiraALaMode.Types
                     , ACME.PreCure.Textbook.KirakiraALaMode.Profiles

                     , ACME.PreCure.Textbook.Hugtto.Types
                     , ACME.PreCure.Textbook.Hugtto.Profiles
  build-depends:       base >= 4.7 && < 5
                     -- TODO: specify version
                     , aeson
                     , aeson-pretty
                     , autoexporter
                     , bytestring
                     , monad-skeleton
                     , dlist
                     , template-haskell
                     , text
                     , th-data-compat
                     , th-strict-compat
                     , th-utilities
  default-language:    Haskell2010

test-suite typesafe-precure-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  other-modules:       ACME.PreCureSpec
  build-depends:       base
                     , typesafe-precure
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/igrep/typesafe-precure
