name:                 typesafe-precure
version:              0.7.6.1
synopsis:             Type-safe transformations and purifications of PreCures (Japanese Battle Heroine)
description:          See README.md for details.
homepage:             https://github.com/igrep/typesafe-precure#readme
license:              BSD3
license-file:         LICENSE
author:               Yuji Yamamoto
maintainer:           whosekiteneverfly@gmail.com
copyright:            2019 Yuji Yamamoto
category:             ACME
build-type:           Simple
extra-source-files:   README.md
                      CHANGELOG.md
                      gen/*.json
cabal-version:        >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     ACME.PreCure
                     , ACME.PreCure.Textbook
                     , ACME.PreCure.Textbook.First
                     , ACME.PreCure.Textbook.MaxHeart
                     , ACME.PreCure.Textbook.SplashStar
                     , ACME.PreCure.Textbook.Yes5
                     , ACME.PreCure.Textbook.Yes5GoGo
                     , ACME.PreCure.Textbook.Fresh
                     , ACME.PreCure.Textbook.HeartCatch
                     , ACME.PreCure.Textbook.Suite
                     , ACME.PreCure.Textbook.Smile
                     , ACME.PreCure.Textbook.DokiDoki
                     , ACME.PreCure.Textbook.HappinessCharge
                     , ACME.PreCure.Textbook.GoPrincess
                     , ACME.PreCure.Textbook.Movie
                     , ACME.PreCure.Textbook.MahoGirls
                     , ACME.PreCure.Textbook.KirakiraALaMode
                     , ACME.PreCure.Textbook.Hugtto
                     , ACME.PreCure.Textbook.StarTwinkle

                     , ACME.PreCure.Types
                     , ACME.PreCure.Monad
                     , ACME.PreCure.Monad.Super
                     , ACME.PreCure.Index

  other-modules:       ACME.PreCure.Types.TH
                     , ACME.PreCure.Types.TH.PreCureGirlMap
                     , ACME.PreCure.Index.Gen
                     , ACME.PreCure.Index.Types
                     , ACME.PreCure.Index.Lib
                     , ACME.PreCure.Monad.Config
                     , ACME.PreCure.Monad.Super.Core

                     , ACME.PreCure.Textbook.First.Profiles
                     , ACME.PreCure.Textbook.First.Words

                     , ACME.PreCure.Textbook.MaxHeart.Profiles
                     , ACME.PreCure.Textbook.MaxHeart.Words

                     , ACME.PreCure.Textbook.SplashStar.Profiles
                     , ACME.PreCure.Textbook.SplashStar.Words

                     , ACME.PreCure.Textbook.Yes5.Profiles
                     , ACME.PreCure.Textbook.Yes5.Words

                     , ACME.PreCure.Textbook.Yes5GoGo.Profiles
                     , ACME.PreCure.Textbook.Yes5GoGo.Words

                     , ACME.PreCure.Textbook.Fresh.Profiles
                     , ACME.PreCure.Textbook.Fresh.Words

                     , ACME.PreCure.Textbook.HeartCatch.Profiles
                     , ACME.PreCure.Textbook.HeartCatch.Words

                     , ACME.PreCure.Textbook.Suite.Profiles
                     , ACME.PreCure.Textbook.Suite.Words

                     , ACME.PreCure.Textbook.Smile.Profiles
                     , ACME.PreCure.Textbook.Smile.Words

                     , ACME.PreCure.Textbook.DokiDoki.Profiles
                     , ACME.PreCure.Textbook.DokiDoki.Words

                     , ACME.PreCure.Textbook.HappinessCharge.Profiles
                     , ACME.PreCure.Textbook.HappinessCharge.Words

                     , ACME.PreCure.Textbook.GoPrincess.Profiles
                     , ACME.PreCure.Textbook.GoPrincess.Words

                     , ACME.PreCure.Textbook.Movie.Profiles
                     , ACME.PreCure.Textbook.Movie.Words

                     , ACME.PreCure.Textbook.MahoGirls.Profiles
                     , ACME.PreCure.Textbook.MahoGirls.Words

                     , ACME.PreCure.Textbook.KirakiraALaMode.Profiles
                     , ACME.PreCure.Textbook.Hugtto.Profiles
                     , ACME.PreCure.Textbook.StarTwinkle.Profiles
  build-depends:       base >= 4.7 && < 5
                     -- TODO: specify version
                     , aeson
                     , aeson-pretty
                     , autoexporter
                     , bytestring
                     , containers
                     , deriveJsonNoPrefix
                     , monad-skeleton
                     , indexed
                     , indexed-extras
                     , extensible >= 0.6
                     , membership
                     , dlist
                     , template-haskell
                     , text
                     , th-data-compat
                     , th-strict-compat
                     , th-utilities
                     , transformers
  default-language:    Haskell2010

test-suite typesafe-precure-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  other-modules:       ACME.PreCureSpec
  build-depends:       base
                     , typesafe-precure
                     , hspec
  default-language:    Haskell2010

flag build-test-script
  default: False

executable typesafe-precure-generate-all-precurem
  if flag(build-test-script)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      scripts
  ghc-options:         -Wall
  main-is:             generate-all-precurem.hs
  build-depends:       base
                     , typesafe-precure
                     , aeson
                     , containers
                     , here
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/igrep/typesafe-precure
